# cy-weather

./: README.md  docker-compose.yaml  index.html  prometheus.yml  sonar-project.properties  test_sample.py
.github/workflows/: pages.yml  python-ci.yml
api/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
api/src/models/: Weather.py
api/src/resources/: weather_resource.py
api/src/services/: weather_service.py
assets/: index-B5Yf9yyi.css  index-BVPjmt0H.js  index-DcuTEyoc.js  index-bp7IoLlM.js
web/: .env  README.md  package-lock.json  vite.config.ts
web/src/: App.vue
web/src/api/: api.ts
web/src/components/: CurrentWeather.vue  WeatherForecast.vue
web/src/types/: weather.ts
