[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "httpx>=0.27.0",
    "prometheus-fastapi-instrumentator==7.1.0"]

